on hover button working

--- a/page.html
+++ b/page.html
@@ -4,8 +4,36 @@
 <script src="page.js"></script>
 </head>
 <body>
-<p style="display:none">If you click on the "Hide" button, I will disappear.</p>
+<div id="item">
+<p>If you click on the "Hide" button, I will disappear.</p>
+</div>
 <button id="hide">Hide</button>
 <button id="show">Show</button>
+
+<svg height="400" width="450">
+
+    <path id="lineAB" d="M 100 350 l 0 -300" stroke="red" stroke-width="3" fill="none" />
+    <path id="lineBC" d="M 100 50 l 200 0" stroke="red" stroke-width="3" fill="none" />
+    <path id="lineAB" d="M 300 50 l 0 300" stroke="red" stroke-width="3" fill="none" />
+    <path id="lineBC" d="M 300 350 l -200 0" stroke="red" stroke-width="3" fill="none" />
+
+
+  <!-- Mark relevant points -->
+  <g id="points" stroke="black" stroke-width="3" fill="black">
+    <circle id="pointA" cx="100" cy="200" r="3" />
+    <circle id="pointB" cx="200" cy="50" r="3" />
+    <circle id="pointC" cx="300" cy="200" r="3" />
+    <circle id="pointD" cx="200" cy="350" r="3" />
+  </g>
+  <!-- Label the points -->
+  <!-- <g font-size="30" font-family="sans-serif" fill="black" stroke="none" text-anchor="middle">
+    <text x="100" y="200" dx="-30">A</text>
+    <text x="200" y="50" dy="-10">B</text>
+    <text x="300" y="200" dx="30">C</text>
+    <text x="200" y="350" dy="30">D</text>
+  </g> -->
+
+</svg>
+
 </body>
 </html>
