on hover box , mid points displayed

--- a/page.html
+++ b/page.html
@@ -11,15 +11,15 @@
 <button id="show">Show</button>
 
 <svg height="400" width="450">
-
-    <path id="lineAB" d="M 100 350 l 0 -300" stroke="red" stroke-width="3" fill="none" />
-    <path id="lineBC" d="M 100 50 l 200 0" stroke="red" stroke-width="3" fill="none" />
-    <path id="lineAB" d="M 300 50 l 0 300" stroke="red" stroke-width="3" fill="none" />
-    <path id="lineBC" d="M 300 350 l -200 0" stroke="red" stroke-width="3" fill="none" />
-
+  <g id="box" stroke="red" stroke-width="3" fill="none">
+    <path id="lineAB" d="M 100 350 l 0 -300"/>
+    <path id="lineBC" d="M 100 50 l 200 0" />
+    <path id="lineAB" d="M 300 50 l 0 300" />
+    <path id="lineBC" d="M 300 350 l -200 0"  />
+  </g>
 
   <!-- Mark relevant points -->
-  <g id="points" stroke="black" stroke-width="3" fill="black">
+  <g style="display:none" id="points" stroke="black" stroke-width="3" fill="black">
     <circle id="pointA" cx="100" cy="200" r="3" />
     <circle id="pointB" cx="200" cy="50" r="3" />
     <circle id="pointC" cx="300" cy="200" r="3" />
