--- a/page.html
+++ b/page.html
@@ -10,13 +10,15 @@
 <button id="hide">Hide</button>
 <button id="show">Show</button>
 
-<svg height="400" width="450">
-  <g id="box" stroke="red" stroke-width="3" fill="blue" onmouseover="show()" onmouseout="hide()">
-    <path id="lineAB" d="M 100 350 l 0 -300"/>
-    <path id="lineBC" d="M 100 50 l 200 0" />
-    <path id="lineAB" d="M 300 50 l 0 300" />
-    <path id="lineBC" d="M 300 350 l -200 0"  />
+<svg height="355" width="305" onmouseover="show()" onmouseout="hide()">
+
+  <g stroke="red" stroke-width="3" fill="blue" >
+    <path id="lineAB" d="M 100 350 l 0 -300" fill="blue"/>
+    <path id="lineBC" d="M 100 50 l 200 0"  fill="blue"/>
+    <path id="lineAB" d="M 300 50 l 0 300"  fill="blue"/>
+    <path id="lineBC" d="M 300 350 l -200 0"  fill="blue"/>
   </g>
+
 
   <!-- Mark relevant points -->
   <g id="points" style="display:none" stroke="black" stroke-width="3" fill="black">
